# sendblue

./: CONTRIBUTING  Cargo.toml  LICENSE-APACHE  README.md  README.tpl
.github/workflows/: ci.yml  release.yml  test.yml  testing.yml
src/: error.rs  lib.rs  prelude.rs
src/model/: callback_url.rs  evaluate_service.rs  media_url.rs  message.rs  mod.rs  phonenumber copy 2.rs  phonenumber copy.rs  phonenumber.rs  status.rs  typing_indicator.rs  voice_note.rs
src/models/: callback_url.rs  evaluate_service.rs  media_url.rs  message.rs  mod.rs  phonenumber.rs  send_style.rs  status.rs  typing_indicator.rs  voice_note.rs
src/trait/: mod.rs  url.rs
src/traits/: mod.rs  sendable_message.rs  url.rs
tests/: evaluate_service_case.json  get_messages_case.json  group_message_case.json  message_case.json  typing_indicator_case.json
