[package]
name = "sendblue"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
authors = ["NewtTheWolf <dominik@spitzli.dev>"]
description = "SendBlue is a Rust library that provides an API client for interacting with the SendBlue REST API, enabling businesses to integrate iMessage and SMS services into their applications."
license-file = "LICENSE"
repository = "https://github.com/NewtTheWolf/sendblue-rs"
documentation = "https://docs.rs/sendblue"
homepage = "https://github.com/NewtTheWolf/sendblue-rs"
readme = "README.md"
keywords = ["iMessage", "SMS", "SendBlue", "Business-Communication", "Automation"]
categories = ["communications", "network-programming", "api-tools", "automation", "business-applications"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
url = "2.5.2"
phonenumber = "0.3.6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
phonenumber = "0.3"
serde = { version = "1.0", features = ["derive"] }
test-generator = "0.3"
tokio-test = "0.4.4"
mockito = "1.4"

[features]
default = []

[profile.release]
opt-level = 3
