[package]
name = "sendblue"
version = "0.0.0"
edition = "2021"
rust-version = "1.79"
authors = ["NewtTheWolf <dominik@spitzli.dev>"]
description = "SendBlue is a Rust library that provides an API client for interacting with the SendBlue REST API, enabling businesses to integrate iMessage and SMS services into their applications."
license = "MIT OR Apache-2.0"
repository = "https://github.com/NewtTheWolf/sendblue-rs"
documentation = "https://docs.rs/sendblue"
homepage = "https://github.com/NewtTheWolf/sendblue-rs"
readme = "README.md"
keywords = ["iMessage", "SMS", "SendBlue", "API-Client", "Wrapper"]
categories = ["api-bindings", "asynchronous", "network-programming", "web-programming", "development-tools"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
regex = "1.10"
url = "2.5.2"
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8.0", features = ["chrono"], optional = true }
serde_with = { version = "3.9.0", features = ["schemars_0_8"] }
tracing = "0.1.40"
bytes = { version = "1.7", optional = true }
base64 = { version = "0.22.1", optional = true }
garde = { version = "0.20.0", features = ["phone-number"] }
phonenumber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
phonenumber = "0.3"
serde = { version = "1.0", features = ["derive"] }
test-generator = "0.3"
tokio-test = "0.4.4"
httpmock = "0.7.0"

[features]
default = []
schemars = ["dep:schemars"]
convert = ["dep:bytes", "dep:base64"]

[profile.release]
opt-level = 3

[badges]
github = { repository = "NewtTheWolf/sendblue-rs" }
